[package]
name = "solana-firedancer"
description = "Solana Firedancer"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = "Apache-2.0"
edition = { workspace = true }

[dependencies]
paste = { workspace = true }
firedancer-sys = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
